--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ListenPort": 5192,
   "MongoDb:ConnectionString": "mongodb://radariodbuser:qwertyp0p@ds050539.mlab.com:50539/nylanding", 
-  "MongoDb:Database": "nylanding"
+  "MongoDb:Database": "nylanding",
+  "RadarioDb:ConnectionString": "Data Source=singaporesrv.radario.ru; Initial Catalog=radario; User Id=radariodbuser; Password=nope; Connection Timeout=60; Connection Lifetime=600;"
 }
