--- a/NewYearLanding.csproj
+++ b/NewYearLanding.csproj
@@ -16,6 +16,9 @@
     <PackageReference Include="MongoDB.Driver">
       <Version>2.7.2</Version>
     </PackageReference>
+    <PackageReference Include="ZNetCS.AspNetCore.Authentication.Basic">
+      <Version>3.0.0</Version>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
