--- a/NewYearLanding.csproj
+++ b/NewYearLanding.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -19,6 +19,10 @@
     <PackageReference Include="ZNetCS.AspNetCore.Authentication.Basic">
       <Version>3.0.0</Version>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\css\style.css" />
   </ItemGroup>
 
 </Project>
