--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.17",
+    "vue-meta": "^1.5.8",
     "vue-mouse-parallax": "^0.9.2",
     "vue-scrollto": "^2.13.0",
     "vuex": "^3.0.1"
